--- a/ui/index.html
+++ b/ui/index.html
@@ -8,13 +8,14 @@
 
 	<body>
 		<div id="panoptichrome"></div>
-
+		
 		<script src="scripts/thirdparty/jquery-2.0.2.min.js" type="text/javascript"></script>
 		<script src="scripts/thirdparty/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
-		<script src="scripts/node_modules/lodash/dist/lodash.min.js" type="text/javascript"></script>
-		<script src="scripts/node_modules/backbone/backbone-min.js" type="text/javascript"></script>
-		<script src="scripts/node_modules/socket.io-client/dist/socket.io.min.js" type="text/javascript"></script>
-		<script src="scripts/node_modules/mediator-js/mediator.min.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js" type="text/javascript"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js" type="text/javascript"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.4.0/backbone-min.js" type="text/javascript"></script>
+		<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+		<script src="https://unpkg.com/mediator-js@0.11.0/mediator.min.js" type="text/javascript"></script>
 		<script src="scripts/Browser.js" type="text/javascript"></script>
 		<script src="scripts/BrowserListView.js" type="text/javascript"></script>
 		<script src="scripts/DetailView.js" type="text/javascript"></script>
